welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:20: error: Boolean does not take parameters
else { (getDirection()==Direction.OUEST){
                                        ^