welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
baisseBrosse();

while (estFaceMur==false){
	avance() 
}
if (getDirection()==Direction.EST){
	gauche();
	if (estFaceMur==true){
	
	}
	else {
	
	avance(); 
	gauche()
	}
	
}
else { (getDirection()==Direction.OUEST){
	droite();
	if (estFaceMur==true){
	
	}
	else {
	avance()
	droite()
	
	}
}
	

}
}

